test/statements/select/multipleOtherwise.good
multipleOtherwise.chpl:4: syntax error: select has multiple otherwise clauses
